--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <p>Pão, carne, alface, tomate, queijo cheddar, molho especial</p>
       <p class="price">R$ 16,90</p>
     </div>
+    
+    </div>
 
     <div class="menu-container">
       <div class="menu-item">
@@ -30,6 +32,8 @@
       <h2>Batatas Fritas</h2>
       <p>Batatas cortadas em palitos e fritas</p>
       <p class="price">R$ 9,50</p>
+    </div>
+
     </div>
 
 
